# nwn_ee_korean

./: .gitignore  CLAUDE.md  README.md  build_release.py  csv_to_tlk.py  pyproject.toml  tlk_to_csv.py
docs/: BLOG_POST.md
mac/: README.md  RELEASE_README.md
mac/hook/: Makefile  apply_korean_patch.py  cp949_table_full.h  cp949_table_hangul.h  korean_chars_used.txt  korean_glyph_table.h  ksx1001_hangul.h  nwn_korean_hook.c  run_nwn_korean.sh  test_cp949  test_glyph
mac/scripts/: install.py
translate/: editor.py  merge_dialog_files.py
translate/dialog_translated/: AAMBTOWN.csv  AARCHE.csv  AARI.csv  AARIN.csv  ABETH.csv  ABRIZAFAE.csv  ADAELAN.csv  ADEATH.csv  AELAITH.csv  AFARMER.csv  AFARMWIFE.csv  AGATESEARGENT.csv  AGHAAZ.csv  AGRAYBAN.csv  AGROVEL.csv  AGULHRYS.csv  AIMLOTH.csv  AJAX2.csv  ALHLR.csv  ALI2.csv  ALINU.csv  ALIZ.csv  ALLHELM.csv  ALLSAPP.csv  AMADAME.csv  AMBCOM.csv  AMBIENTFEM.csv  AMBIENTMAN.csv  AMISCHA.csv  ANATHYRRA.csv  ANDA.csv  ANDER.csv  APARLEY.csv  APPRENTICE.csv  ARCH.csv  AREVAT.csv  ARGALI.csv  ARIB.csv  ARKLEM.csv  ARUPH.csv  (+979 more)
translate/tools/: check_ksx1001.py
windows/: README.md  RELEASE_README.md
windows/hook/: build.bat  cp949_utils.h  nwn_korean_hook.c  nwn_korean_loader.c
windows/scripts/: install.py
