[project]
name = "nwn-ee-korean"
version = "0.1.0"
description = "NWN:EE Korean localization patch"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
nwn-build = "build_release:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # line too long

[tool.ruff.format]
quote-style = "double"
